--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
 .App {
+  font-family: "Oswald", sans-serif;
   text-align: center;
+  color: #282c34;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  height: wrap-content;
   display: flex;
+  margin-bottom: 100px;
   flex-direction: column;
+  width: 100%;
+  text-align: start;
+  justify-content: top;
+  color: #282c34;
+}
+
+h1 {
+  margin: 0px 20px 0px 20px;
+  font-size: calc(10px + 6vmin);
+}
+
+h2 {
+  margin: 0px 20px 0px 20px;
+  font-size: calc(10px + 3vmin);
+}
+
+.main-container {
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  justify-content: space-around;
+}
+
+.section-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.section-container.left {
+  width: calc(100% - 0px);
+  flex-grow: 1;
+  flex-basis: 66.666%;
+  margin: 0px 0px 0px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 10px;
+}
+
+.section-container.right {
+  width: calc(100% - 20px);
+  flex-grow: 1;
+  flex-basis: 33.333%;
+  display: flex;
+  margin-left: 10px;
+  padding-bottom: 20px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: max-content;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  margin: 0px 0px 10px 0px;
+  font-size: calc(12px + 1.5vmin);
+  font-weight: 900;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 768px) {
+  .main-container {
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+
+  .container-left,
+  .container-right {
+    flex-basis: auto; /* Reset flex-basis for full width on smaller screens */
+  }
+
+  .container-left {
+    align-items: center;
   }
 }
