--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
   font-family: "Oswald", sans-serif;
   text-align: center;
   color: #282c34;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0px 20px 0px 20px;
 }
 
 .header {
@@ -44,18 +43,16 @@ h2 {
   width: calc(100% - 0px);
   flex-grow: 1;
   flex-basis: 66.666%;
-  margin: 0px 0px 0px 0px;
+  margin: 0px 0px 40px 0px;
   display: flex;
   flex-wrap: wrap;
-  margin-right: 10px;
 }
 
 .section-container.right {
-  width: calc(100% - 20px);
+  width: calc(100% - 0px);
   flex-grow: 1;
   flex-basis: 33.333%;
   display: flex;
-  margin-left: 10px;
   padding-bottom: 20px;
   align-items: center;
   height: max-content;
@@ -70,6 +67,14 @@ p {
 @media screen and (max-width: 768px) {
   .main-container {
     flex-direction: column;
+  }
+
+  h1 {
+    font-size: calc(10px + 4vmin);
+  }
+
+  h2 {
+    font-size: calc(10px + 2vmin);
   }
 
   .container-left,
