--- a/src/components/cv_section/Card.css
+++ b/src/components/cv_section/Card.css
@@ -2,7 +2,7 @@
   min-width: wrap-content;
   box-shadow: 0 2px 4px #a488e6c4;
   border: 1px solid #7e4fedc4;
-  margin: 10px 10px 20px 10px;
+  margin: 10px 10px 5px 10px;
   padding: 0px 20px 0px 20px;
   justify-items: center;
   color: black;
@@ -42,7 +42,8 @@
 }
 
 .card-content {
-  overflow: hidden;
+  width: calc(100% - 0px);
+  overflow: wrap-content;
   transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
   max-height: 0;
   opacity: 0;
@@ -61,13 +62,15 @@
 
 p.item-title {
   font-size: calc(6px + 1.5vmin);
-  width: max-content;
+  width: fit-content;
+  text-align: left;
   margin: 5px 10px 0px 0px;
 }
 
 p.item-subtitle {
-  width: max-content;
   font-size: calc(6px + 1.5vmin);
+  width: fit-content;
+  text-align: left;
   font-weight: 400;
   margin: 5px 10px 20px 0px;
   color: gray;
