update cv pdfs | add footer | improves resposivity

--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,22 @@
   font-family: "Oswald", sans-serif;
   text-align: center;
   color: #282c34;
-  padding: 0px 20px 0px 20px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .header {
-  height: wrap-content;
+  position: relative;
+  width: 100%;
+  border: 0px;
   display: flex;
   margin-bottom: 20px;
   flex-direction: column;
-  width: 100%;
   text-align: start;
   justify-content: top;
-  color: #282c34;
+  color: #282c34cb;
 }
 
 h1 {
@@ -27,21 +31,26 @@ h2 {
 }
 
 .main-container {
+  position: relative;
   display: flex;
   width: 100%;
-  margin-top: 50px;
+  margin-bottom: 5rem;
   justify-content: space-around;
+  flex: 1;
 }
 
 .container-full-screen {
+  position: relative;
   width: 33.33%;
   display: flex;
-  float: right;
+  align-self: flex-end;
   margin-bottom: 20px;
   justify-content: space-evenly;
 }
 
 .section-container {
+  position: relative;
+  flex: 1;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -54,6 +63,7 @@ h2 {
   margin: 0px 0px 40px 0px;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 }
 
 .section-container.right {
@@ -64,6 +74,7 @@ h2 {
   padding-bottom: 20px;
   align-items: center;
   height: max-content;
+  position: relative;
 }
 
 p {
@@ -74,6 +85,8 @@ p {
 
 @media screen and (max-width: 768px) {
   .main-container {
+    position: relative;
+    display: flex;
     flex-direction: column;
   }
 
@@ -98,6 +111,14 @@ p {
     width: 100%;
     display: flex;
   }
+
+  .footer {
+    flex-direction: column;
+  }
+
+  .footer-item {
+    display: inline-block;
+  }
 }
 
 /* profile picture */
@@ -108,4 +129,55 @@ p {
   border-radius: 50%;
   border: 2px solid rgba(149, 0, 223, 0.72); /* Adjust the width and color as needed */
   box-shadow: 4px 6px 8px rgba(165, 161, 165, 0.7); /* Adjust the shadow properties */
+  transition: all 0.3s ease;
+}
+
+.profile-picture:hover {
+  /*transform: rotateY(360deg);*/
+  transform: scale(1.8);
+  border-width: 0.5px;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  height: 100%;
+}
+
+.footer {
+  background: #282c34;
+  position: relative;
+  display: flex;
+  height: 8rem;
+  min-height: max-content;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  align-self: bottom;
+  gap: 2rem;
+  row-gap: 1rem;
+  padding: 1rem;
+}
+
+.footer-item {
+  display: inline-flex;
+  text-align: center;
+  height: fit-content;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.footer-item a {
+  display: flex;
+  flex-direction: row;
+  color: white;
+  text-decoration: none;
+  font-weight: 300;
+  font-size: 1rem;
+  justify-content: center;
+  text-align: top;
+  letter-spacing: 1.8px;
+  gap: 0.5rem;
 }
