remove temp footer

--- a/src/App.css
+++ b/src/App.css
@@ -147,19 +147,18 @@ p {
   background: #282c34;
   position: relative;
   display: flex;
-  height: 8rem;
-  min-height: max-content;
+  height: max-content;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
   align-self: bottom;
   gap: 2rem;
   row-gap: 1rem;
-  padding: 1rem;
+  padding: 3rem 1rem 3rem 1rem;
 }
 
 .footer-item {
-  display: inline-flex;
+  display: flex;
   text-align: center;
   height: fit-content;
   justify-content: center;
@@ -169,7 +168,7 @@ p {
 .footer-item a {
   display: flex;
   flex-direction: row;
-  color: white;
+  color: rgb(10, 52, 110);
   text-decoration: none;
   font-weight: 300;
   font-size: 1rem;
