--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,6 @@ p {
 
   .container-full-screen {
     width: 100%;
-    display: flex;
   }
 
   .footer {
@@ -158,7 +157,10 @@ p {
 }
 
 .footer-item {
+  background-color: blue;
   display: flex;
+  flex: 1;
+  width: 100%;
   text-align: center;
   height: fit-content;
   justify-content: center;
