--- a/src/App.css
+++ b/src/App.css
@@ -112,7 +112,6 @@ p {
   }
 
   .footer {
-    background: red !important;
     flex-direction: column !important;
   }
 }
@@ -129,7 +128,6 @@ p {
 }
 
 .profile-picture:hover {
-  /*transform: rotateY(360deg);*/
   transform: scale(1.8);
   border-width: 0.5px;
 }
@@ -146,7 +144,7 @@ p {
   background: #282c34;
   position: relative;
   display: flex;
-  height: max-content;
+  height: fit-content;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
@@ -157,7 +155,6 @@ p {
 }
 
 .footer-item {
-  background-color: blue;
   display: flex;
   flex: 1;
   width: 100%;
@@ -170,7 +167,7 @@ p {
 .footer-item a {
   display: flex;
   flex-direction: row;
-  color: rgb(10, 52, 110);
+  color: white;
   text-decoration: none;
   font-weight: 300;
   font-size: 1rem;
